k8s/talos/apps/omni-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  namespace: omni-tools
  labels:
    app: omni-tools
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: omni-tools
  template:
    metadata:
      labels:
        app: omni-tools
    spec:
      containers:
        - name: omni-tools
          image: iib0011/omni-tools:0.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            failureThreshold: 3
