k8s/talos/apps/omni-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools-service
  namespace: omni-tools
spec:
  selector:
    app: omni-tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
