k8s/talos/apps/omni-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-tools-ingress
  namespace: omni-tools
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`omni-tools.bigd.no`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: omni-tools-service
          port: 80
  tls:
    secretName: bigd-no-tls
